--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,25 @@
 	<meta charSet="utf-8"/>
 	<meta http-equiv="x-ua-compatible" content="ie=edge"/>
 	<meta name="description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
-	<meta name="keywords" content="programmer, github, python, mayank gupta india, mayank, code">
+	<meta name="keywords" content="programmer, github, python, mayank gupta india, mayank, code, mayankfawkes">
 	<meta name="author" content="Mayank Gupta">
+	<meta name="revisit-after" content="1 days">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes"/>
+
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://mayankfawkes.xyz/">
+	<meta property="og:title" content="Mayank Gupta | Personal Site">
+	<meta property="og:description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
+	<meta property="og:image" content="https://mayankfawkes.xyz/banner.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://mayankfawkes.xyz/">
+	<meta property="twitter:title" content="Mayank Gupta | Personal Site">
+	<meta property="twitter:description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
+	<meta property="twitter:image" content="https://mayankfawkes.xyz/banner.png">
+
+
 	<link rel="stylesheet" href="./css/gstyle.css">
 	<link rel="stylesheet" href="./css/my.css">
 	<script src="./js/a076d05399.js"></script>
