--- a/site/index.html
+++ b/site/index.html
@@ -24,17 +24,10 @@
 
 	<link rel="stylesheet" href="./css/gstyle.css">
 	<link rel="stylesheet" href="./css/my.css">
+	
 	<script src="./js/a076d05399.js"></script>
 	<title>Mayank | Personal Site</title>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-E5TX1PH1EE"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-E5TX1PH1EE');
-	</script>
-	<!-- Global site tag (gtag.js) - Google Analytics End -->
+
 
 </head>
 <body class="glit">
@@ -42,7 +35,8 @@
 <div class="glitch-wrapper">
 <div class="glitch-text"><a rollapp-href=""><small><small><small><span style="color: red;"><img alt="" image_download_for_instagram="true"></span></small></small></small></a><small><small><small> </small></small></small></div></div>
 
-<script src='js/jquery.min.js'></script><script src="/js/my.js"></script>
+<script src='js/jquery.min.js'></script>
+<script src="/js/my.js"></script>
 </body>
 
 </html>
