--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charSet="utf-8"/>
 	<meta http-equiv="x-ua-compatible" content="ie=edge"/>
-	<meta name="description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
+	<meta name="description" content="I'm a computer programmer makes awesome programs for awesome peoples | Python Devloper, Mayank Gupta India">
 	<meta name="keywords" content="programmer, github, python, mayank gupta india, mayank, code, mayankfawkes">
 	<meta name="author" content="Mayank Gupta">
 	<meta name="revisit-after" content="1 days">
@@ -12,13 +12,13 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://mayankfawkes.xyz/">
 	<meta property="og:title" content="Mayank Gupta | Personal Site">
-	<meta property="og:description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
+	<meta property="og:description" content="I'm a computer programmer makes awesome programs for awesome peoples | Python Devloper, Mayank Gupta India">
 	<meta property="og:image" content="https://mayankfawkes.xyz/banner.png">
 
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://mayankfawkes.xyz/">
 	<meta property="twitter:title" content="Mayank Gupta | Personal Site">
-	<meta property="twitter:description" content="I'm a computer programmer makes awesome programs for awesome poeples | Python Devloper, Mayank Gupta India">
+	<meta property="twitter:description" content="I'm a computer programmer makes awesome programs for awesome peoples | Python Devloper, Mayank Gupta India">
 	<meta property="twitter:image" content="https://mayankfawkes.xyz/banner.png">
 
 
